Fix badge visibility in code view summary
Hiding badge if no code weight has been passed

--- a/src/styles/code-view-summary.styl
+++ b/src/styles/code-view-summary.styl
@@ -4,7 +4,8 @@
     display inline-block
   .code-weight-badge
     margin-top 10px
+    & + .github-button-widget
+      left 10px
   .github-button-container
     position relative
     top 5.5px
-    left 10px
